[workspace]
members = [
  "client",
  "common",
  "server",
]
default-members = ["client", "server"]
resolver = "2"
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bevy = "0.13.2"
# BOTH OF THESE GIT LINKS ARE REQUIRED YES! (until crate gets updated)
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
bevy_ecs_ldtk = { git = "https://github.com/theshortcut/bevy_ecs_ldtk/", branch = "bevy-0.13" }

bevy_egui = "0.27.0"
bevy-inspector-egui = "0.24.0"
serde = {version = "1.0.197", features = ["derive"]}
local-ip-address = "0.6.1"
bincode = "1.3.3"
public-ip = "0.2.2"
tokio = {version = "1.37.0", features = ["full"]}
bevy_xpbd_2d = "0.4"
lightyear = {version = "0.14.0" , features = [ "leafwing" ] }
leafwing-input-manager = "0.13"

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
