[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common", features = [ "client" ] }

#bevy
bevy = { workspace = true }
bevy_egui = { workspace = true }
bevy-inspector-egui = { workspace = true }
bincode = { workspace = true }
bevy_ecs_ldtk = { workspace = true }
bevy_ecs_tilemap = { workspace = true }
bevy_xpbd_2d = { workspace = true }
lightyear = { workspace = true }
leafwing-input-manager = { workspace = true }

tokio = { workspace = true }
