[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common", features = [ "server" ] }
bevy = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
lightyear = { workspace = true}
leafwing-input-manager = { workspace = true }

#networking
public-ip = { workspace = true }
local-ip-address = { workspace = true }
